--- a/public/photo/just-take-photos/index.html
+++ b/public/photo/just-take-photos/index.html
@@ -28,6 +28,7 @@
     <h1>就是随便拍拍</h1>
     <h3 id="2020-校园银杏马拉松">2020 校园银杏马拉松</h3>
 <p><img src="https://raw.githubusercontent.com/chongg039/blog-pic-repo/master/picgo/AAA_2178.jpg" alt=""></p>
+<p><img src="https://raw.githubusercontent.com/chongg039/blog-pic-repo/master/picgo/AAA_2392.jpg" alt=""></p>
 
 <div class="navfooter">
     <table width="100%" summary="Navigation footer">
