--- a/public/photo/my-photo-equipment/index.html
+++ b/public/photo/my-photo-equipment/index.html
@@ -26,7 +26,16 @@
     </div>
   
     <h1>我的工具集合</h1>
-    
+    <h3 id="相机">相机</h3>
+<p>Nikon D750，2020.10.10购于咸鱼，带头5500R，广汉面交，小姐姐人很nice。
+第一台全画幅单反，两万左右的快门，成色95新，目前是主力学习机。</p>
+<h3 id="镜头">镜头</h3>
+<p>Nikkor 24-85mm ED VR变焦头，D750打包。</p>
+<p>Nikkor 50mm 1.8D 人精，2020.11.29购于淘宝，港版，650R。</p>
+<h3 id="其他">其他</h3>
+<p>马小路ET-1541T三脚架，2020.10.21购于淘宝，599R。</p>
+<p>神火L6-H强光手电，2020.12.05购于淘宝，107R。</p>
+
 <div class="navfooter">
     <table width="100%" summary="Navigation footer">
         <tbody>
