--- a/public/photo/just-take-photos/index.html
+++ b/public/photo/just-take-photos/index.html
@@ -26,9 +26,35 @@
     </div>
   
     <h1>就是随便拍拍</h1>
-    <h3 id="2020-校园银杏马拉松">2020 校园银杏马拉松</h3>
-<p><img src="https://raw.githubusercontent.com/chongg039/blog-pic-repo/master/picgo/AAA_2178.jpg" alt=""></p>
-<p><img src="https://raw.githubusercontent.com/chongg039/blog-pic-repo/master/picgo/AAA_2392.jpg" alt=""></p>
+    <h3 id="20201121-康定新都桥">2020.11.21 康定、新都桥</h3>
+<figure>
+    <img src="https://raw.githubusercontent.com/chongg039/blog-pic-repo/master/picgo/AAA_1967.jpg#center"
+         alt="光圈f/5.6，快门1/1000s，焦距85mm"/> <figcaption>
+            <h4>梅里雪山</h4><p>光圈f/5.6，快门1/1000s，焦距85mm</p>
+        </figcaption>
+</figure>
+
+<figure>
+    <img src="https://raw.githubusercontent.com/chongg039/blog-pic-repo/master/picgo/AAA_2006.jpg#center"
+         alt="光圈f/5.6，快门1/800s，焦距85mm，iso100"/> <figcaption>
+            <h4>青绕神山</h4><p>光圈f/5.6，快门1/800s，焦距85mm，iso100</p>
+        </figcaption>
+</figure>
+
+<figure>
+    <img src="https://raw.githubusercontent.com/chongg039/blog-pic-repo/master/picgo/AAA_1814.jpg#center"
+         alt="光圈f/4.5，快门1/800s，焦距80mm，iso200"/> <figcaption>
+            <h4>暮色</h4><p>光圈f/4.5，快门1/800s，焦距80mm，iso200</p>
+        </figcaption>
+</figure>
+
+<figure>
+    <img src="https://raw.githubusercontent.com/chongg039/blog-pic-repo/master/picgo/AAA_1872.jpg#center"
+         alt="光圈f/3.5，快门20s，焦距24mm，iso3200"/> <figcaption>
+            <h4>繁星</h4><p>光圈f/3.5，快门20s，焦距24mm，iso3200</p>
+        </figcaption>
+</figure>
+
 
 <div class="navfooter">
     <table width="100%" summary="Navigation footer">
