--- a/public/photo/just-take-photos/index.html
+++ b/public/photo/just-take-photos/index.html
@@ -42,6 +42,13 @@
 </figure>
 
 <figure>
+    <img src="https://raw.githubusercontent.com/chongg039/blog-pic-repo/master/picgo/AAA_1800.jpg#center"
+         alt="光圈f/4.2，快门1/4000s，焦距48mm，iso200"/> <figcaption>
+            <h4>折多山的落日夕阳</h4><p>光圈f/4.2，快门1/4000s，焦距48mm，iso200</p>
+        </figcaption>
+</figure>
+
+<figure>
     <img src="https://raw.githubusercontent.com/chongg039/blog-pic-repo/master/picgo/AAA_1814.jpg#center"
          alt="光圈f/4.5，快门1/800s，焦距80mm，iso200"/> <figcaption>
             <h4>暮色</h4><p>光圈f/4.5，快门1/800s，焦距80mm，iso200</p>
@@ -52,6 +59,35 @@
     <img src="https://raw.githubusercontent.com/chongg039/blog-pic-repo/master/picgo/AAA_1872.jpg#center"
          alt="光圈f/3.5，快门20s，焦距24mm，iso3200"/> <figcaption>
             <h4>繁星</h4><p>光圈f/3.5，快门20s，焦距24mm，iso3200</p>
+        </figcaption>
+</figure>
+
+<h3 id="20210101-东郊记忆">2021.01.01 东郊记忆</h3>
+<figure>
+    <img src="https://raw.githubusercontent.com/chongg039/blog-pic-repo/master/picgo/AAA_2583.jpg#center"
+         alt="光圈f/8，快门1/25s，焦距50mm，iso800"/> <figcaption>
+            <h4>大字报</h4><p>光圈f/8，快门1/25s，焦距50mm，iso800</p>
+        </figcaption>
+</figure>
+
+<figure>
+    <img src="https://raw.githubusercontent.com/chongg039/blog-pic-repo/master/picgo/AAA_2621-2.jpg#center"
+         alt="光圈f/8，快门1/13s，焦距50mm，iso400"/> <figcaption>
+            <h4>参观人的熊猫</h4><p>光圈f/8，快门1/13s，焦距50mm，iso400</p>
+        </figcaption>
+</figure>
+
+<figure>
+    <img src="https://raw.githubusercontent.com/chongg039/blog-pic-repo/master/picgo/AAA_2643.jpg#center"
+         alt="光圈f/5.6，快门1/10s，焦距50mm，iso2016"/> <figcaption>
+            <h4>吉他与线条</h4><p>光圈f/5.6，快门1/10s，焦距50mm，iso2016</p>
+        </figcaption>
+</figure>
+
+<figure>
+    <img src="https://raw.githubusercontent.com/chongg039/blog-pic-repo/master/picgo/AAA_2660.jpg#center"
+         alt="光圈f/5.6，快门1/800s，焦距50mm，iso1008"/> <figcaption>
+            <h4>招财猫</h4><p>光圈f/5.6，快门1/800s，焦距50mm，iso1008</p>
         </figcaption>
 </figure>
 
