--- a/public/photo/just-take-photos/index.html
+++ b/public/photo/just-take-photos/index.html
@@ -91,6 +91,27 @@
         </figcaption>
 </figure>
 
+<figure>
+    <img src="https://raw.githubusercontent.com/chongg039/blog-pic-repo/master/picgo/AAA_2654.jpg#center"
+         alt="光圈f/5.6，快门1/30s，焦距50mm，iso800"/> <figcaption>
+            <h4>Bang!</h4><p>光圈f/5.6，快门1/30s，焦距50mm，iso800</p>
+        </figcaption>
+</figure>
+
+<figure>
+    <img src="https://raw.githubusercontent.com/chongg039/blog-pic-repo/master/picgo/AAA_2630.jpg#center"
+         alt="光圈f/5.6，快门1/6s，焦距50mm，iso800"/> <figcaption>
+            <h4>冲压机的退休生活</h4><p>光圈f/5.6，快门1/6s，焦距50mm，iso800</p>
+        </figcaption>
+</figure>
+
+<figure>
+    <img src="https://raw.githubusercontent.com/chongg039/blog-pic-repo/master/picgo/AAA_2651.jpg#center"
+         alt="光圈f/5.6，快门1/125s，焦距50mm，iso800"/> <figcaption>
+            <h4>关于1号楼我知道的不多</h4><p>光圈f/5.6，快门1/125s，焦距50mm，iso800</p>
+        </figcaption>
+</figure>
+
 
 <div class="navfooter">
     <table width="100%" summary="Navigation footer">
